--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    width: 80%;
+}
 .header-copertina{
     background-image: url(../img/pattern.png);
     background-color: dodgerblue;
@@ -10,3 +13,10 @@
    address{
     color: gray;
    }
+
+th{
+    background-color: blue;
+}
+.riga-colorata{
+    background-color: aqua;
+}
