--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     width: 100%;
+    
 }
 .header-copertina{
     background-image: url(../img/pattern.png);
@@ -13,6 +14,9 @@ body{
    address{
     color: gray;
    }
+   img{
+    width: 49%;
+   }
 
 th{
     background-color: blue;
@@ -23,17 +27,19 @@ th{
 
 
 .monitor{
-   width: 25%;
-   height: 200px;
+   
+    height: 200px;
     background-image: url(../img/monitor.jpg);
+    background-repeat: no-repeat;
     color: white;
     font-size: 32px;
     margin-top: 10px;
 }
 .graph{
-    width: 25%;
+
     height: 200px;
      background-image: url(../img/graph.jpg);
+     background-repeat: no-repeat;
      color: white;
      font-size: 32px;
      margin-top: 10px;
